--- a/work.html
+++ b/work.html
@@ -118,7 +118,7 @@
     <div class="space">
         <h1>click me !</h1>
         <div class="box">
-            <div class="front"><img src="img/logo.png" alt=""></div>
+            <!-- <div class="front"><img src="img/logo.png" alt=""></div> -->
             <div class="top"></div>
             <div class="right"></div>
             <div class="bottom"></div>
